feat: final version 1

--- a/src/Create_yearly/src/one_governance/notebook/ikea_data_all_analysis.ipynb
+++ b/src/Create_yearly/src/one_governance/notebook/ikea_data_all_analysis.ipynb
@@ -2131,7 +2131,7 @@
     "\n",
     "# display(df_2.head(2))\n",
     "# print(df_2.shape)\n",
-    "#text = df_2[\"Filled Project Report\"].iloc[1]\n",
+    "# text = df_2[\"Filled Project Report\"].iloc[1]\n",
     "display(df_2)"
    ]
   },
@@ -3393,7 +3393,9 @@
     }
    ],
    "source": [
-    "df_report[\"Date Choice end\"] = pd.to_datetime(df_report[\"Date Granted\"], format=\"%B %Y\")+  pd.DateOffset(months=30)\n",
+    "df_report[\"Date Choice end\"] = pd.to_datetime(\n",
+    "    df_report[\"Date Granted\"], format=\"%B %Y\"\n",
+    ") + pd.DateOffset(months=30)\n",
     "\n",
     "# df_report.drop(columns=['date_choix'], inplace=True)\n",
     "display(df_report)"
@@ -3924,7 +3926,10 @@
     "df_v1 = pd.read_csv(\"../../../data/data_scrapped/ikea_foundation_projects.csv\")\n",
     "df_ = pd.read_csv(file_path)\n",
     "df_[\"Date Choice\"] = df_v1[\"Date Choice\"]\n",
-    "df_.to_csv(\"../../../data/data_gen/filled_projects.csv\",index=False,)\n",
+    "df_.to_csv(\n",
+    "    \"../../../data/data_gen/filled_projects.csv\",\n",
+    "    index=False,\n",
+    ")\n",
     "display(df_)"
    ]
   },
@@ -4427,16 +4432,18 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "df_[\"Date Choice end\"] = df_report[\"Date Granted\"].apply(lambda x: pd.to_datetime(x, format=\"%B %Y\") + pd.DateOffset(months=np.random.randint(9, 61)))\n",
+    "df_[\"Date Choice end\"] = df_report[\"Date Granted\"].apply(\n",
+    "    lambda x: pd.to_datetime(x, format=\"%B %Y\")\n",
+    "    + pd.DateOffset(months=np.random.randint(9, 61))\n",
+    ")\n",
     "\n",
     "# df_report.drop(columns=['date_choix'], inplace=True)\n",
-    "display(df_)\n",
-    "\n"
+    "display(df_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4966,10 +4973,42 @@
     }
    ],
    "source": [
+    "file_path = \"../../../data/data_gen/filled_projects.csv\"\n",
+    "df_ = pd.read_csv(file_path)\n",
     "df12 = df_.loc[:, df_.isna().sum() <= 150]\n",
     "display(df12)\n",
-    "display(df12.shape)\n",
-    "\n"
+    "display(df12.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                        $500,000 [x]\n",
+       "1                                  [x] $5,000,000 USD\n",
+       "2                                 $50,000,000 USD [x]\n",
+       "3                                    $192,850 USD [x]\n",
+       "4                                  $2,119,000 USD [x]\n",
+       "                            ...                      \n",
+       "204                                  $898,770 USD [x]\n",
+       "205    [x] $11.4 million USD (converted from €10.04M)\n",
+       "206                                        [x] €2.60M\n",
+       "207                             $2.41 million USD [x]\n",
+       "208                               $20 million USD [x]\n",
+       "Name: 5. Total Budget, Length: 209, dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df12[\"5. Total Budget\"]"
    ]
   },
   {
@@ -4978,7 +5017,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df12.to_csv(\"../../../data/data_gen/filled_projects.csv\",index=False,)\n"
+    "df12.to_csv(\n",
+    "    \"../../../data/data_gen/filled_projects.csv\",\n",
+    "    index=False,\n",
+    ")"
    ]
   }
  ],
